--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcom to pianistnumber8's homepage!
+description: You can look at this if you want but don't waste your time
